michaelthomson/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: michaelthomson
  namespace: michaelthomson
spec:
  selector:
    matchLabels:
      app: michaelthomson
  template:
    metadata:
      labels:
        app: michaelthomson
    spec:
      containers:
      - name: michaelthomson
        image: gitea.michaelthomson.dev/mthomson/michaelthomson:1.1.1 # {"$imagepolicy": "flux-system:michaelthomson"}
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
