michaelthomson/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: michaelthomson
  namespace: michaelthomson
spec:
  selector:
    app: michaelthomson
  ports:
  - port: 80
    targetPort: http
    name: http
