michaelthomson/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michaelthomson
  namespace: michaelthomson
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: michaelthomson.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: michaelthomson
            port: 
              name: http
  - host: www.michaelthomson.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: michaelthomson
            port: 
              name: http
  tls:
    - hosts:
        - michaelthomson.dev
        - www.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
